--- a/client/scss/application.scss
+++ b/client/scss/application.scss
@@ -1,3 +1,16 @@
-body {
-  background-color: blue;
+*,
+*::before,
+*::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.app {
+  height: 100vh;
+  display: flex;
+}
+.content-container {
+  display: flex;
+  flex-direction: column;
 }
