--- a/client/scss/application.scss
+++ b/client/scss/application.scss
@@ -1,9 +1,16 @@
+@import '_buttons';
+
 *,
 *::before,
 *::after {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: 'Nunito Sans', sans-serif;
+  font-size: 16px;
 }
 
 .app {
@@ -13,4 +20,17 @@
 .content-container {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100vw;
+}
+
+.container-bottom {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  margin-bottom: 5rem;
+  > * {
+    margin: 0 1rem;
+  }
 }
