--- a/client/scss/application.scss
+++ b/client/scss/application.scss
@@ -29,7 +29,7 @@ body {
   display: flex;
   width: 100%;
   justify-content: center;
-  margin-bottom: 5rem;
+  margin: 2rem 0;
   > * {
     margin: 0 1rem;
   }
