--- a/client/components/BoxShadow/CodeContainer/codeContainer.scss
+++ b/client/components/BoxShadow/CodeContainer/codeContainer.scss
@@ -1,8 +1,13 @@
+@import '../../../scss/colors';
+
 .code-container {
   background-color: rgb(26, 26, 26);
+  padding: 0.5rem;
   color: white;
-  height: 8rem;
   width: 15rem;
   overflow: scroll;
-  text-align: center;
+
+  code {
+    color: $code-green;
+  }
 }
