implemented basic React Router structure

--- a/client/components/BoxShadow/SliderContainer/sliderContainer.scss
+++ b/client/components/BoxShadow/SliderContainer/sliderContainer.scss
@@ -1,5 +1,8 @@
+@import '../../../scss//styleVars';
+
 .slider-container {
   background: gray;
   width: 15rem;
   padding: 1rem;
+  border-radius: $border-radius;
 }
