--- a/client/components/BoxShadow/CodeContainer/codeContainer.scss
+++ b/client/components/BoxShadow/CodeContainer/codeContainer.scss
@@ -1,4 +1,5 @@
 @import '../../../scss/colors';
+@import '../../../scss//styleVars';
 
 .code-container {
   background-color: rgb(26, 26, 26);
@@ -6,6 +7,7 @@
   color: white;
   width: 15rem;
   overflow: scroll;
+  border-radius: $border-radius;
 
   code {
     color: $code-green;
