addressed 'cannot get' error caused by react router and webpack config in dev mode'

--- a/client/scss/application.scss
+++ b/client/scss/application.scss
@@ -23,12 +23,13 @@ nav {
   margin: 1rem 0;
   > * {
     margin: 1rem;
+    text-decoration: none;
+    color: rgb(255, 87, 87);
   }
 }
 .content-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
   align-items: center;
   width: 100vw;
 }
