--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -1,1 +1,5 @@
 $code-green: rgb(65, 223, 65);
+$soft-sidebar: rgb(243, 243, 243);
+$button-bg: #413280;
+$box-color: #ee5253;
+$slider-container-color: #c8d6e5;
