--- a/client/components/BoxShadow/SliderContainer/sliderContainer.scss
+++ b/client/components/BoxShadow/SliderContainer/sliderContainer.scss
@@ -1,11 +1,12 @@
 @import '../../../scss//styleVars';
+@import '../../../scss//colors';
 
 .slider-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background: gray;
+  background: rgba($slider-container-color, 0.6);
   width: 15rem;
   padding: 1rem;
   border-radius: $border-radius;
