--- a/client/scss/_buttons.scss
+++ b/client/scss/_buttons.scss
@@ -1,10 +1,14 @@
 @import '_styleVars';
+@import '_colors';
 
 .btn {
   font-size: 1rem;
   padding: 0.5rem 1rem;
+  margin: 0.25rem 0;
   border: none;
   border-radius: $border-radius;
+  background-color: $button-bg;
+  color: white;
   cursor: pointer;
   font-family: 'Nunito Sans', sans-serif;
 }
