--- a/client/scss/_buttons.scss
+++ b/client/scss/_buttons.scss
@@ -4,7 +4,7 @@
 .btn {
   font-size: 1rem;
   padding: 0.5rem 1rem;
-  margin: 0.25rem 0;
+  margin: 0.25rem;
   border: none;
   border-radius: $border-radius;
   background-color: $button-bg;
