--- a/client/scss/_code_container.scss
+++ b/client/scss/_code_container.scss
@@ -11,6 +11,7 @@
 
   textarea {
     color: $code-green;
+    font-family: 'Menlo', monospace;
     background: rgb(26, 26, 26);
     width: 100%;
     font-size: 1rem;
