changed color scheme

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -1,5 +1,7 @@
 $code-green: rgb(65, 223, 65);
-$soft-sidebar: rgb(243, 243, 243);
-$button-bg: #413280;
+$soft-sidebar: rgba(#1e90ff, 0.9);
+$button-bg: rgb(253, 253, 253);
+$button-active-bg: #2d3436;
 $box-color: #ee5253;
-$slider-container-color: #c8d6e5;
+$slider-container-color: rgb(253, 253, 253);
+$dark: #2d3436;
