--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -1,4 +1,5 @@
 $code-green: rgb(65, 223, 65);
+$code-bg: rgb(26, 26, 26);
 $soft-sidebar: rgba(#1e90ff, 0.9);
 $button-bg: rgb(253, 253, 253);
 $button-active-bg: #2d3436;
