tweaked color scheme, added colors for other btns

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -1,7 +1,9 @@
 $code-green: rgb(65, 223, 65);
 $code-bg: rgb(26, 26, 26);
-$soft-sidebar: rgba(#1e90ff, 0.9);
+$soft-sidebar: #30336b;
 $button-bg: rgb(253, 253, 253);
+$button-bg-2: #30336b;
+$button-hover-bg: #4c5558;
 $button-active-bg: #2d3436;
 $box-color: #ee5253;
 $slider-container-color: rgb(253, 253, 253);
