fixed animating dev bar for large screens

--- a/client/components/Sidebar/sidebar.scss
+++ b/client/components/Sidebar/sidebar.scss
@@ -22,3 +22,9 @@
 .sidebar-hidden {
   transform: translateX(-15rem);
 }
+
+@media (min-width: 701px) {
+  .sidebar {
+    transition: none;
+  }
+}
