--- a/client/components/Burger/burger.scss
+++ b/client/components/Burger/burger.scss
@@ -14,6 +14,7 @@
     height: 6px;
     border-radius: 15px;
     background-color: $soft-sidebar;
+    box-shadow: 0.5px 0.5px 0.5px 0.5px rgba(0, 0, 0, 0.2);
     transition: 0.4s all ease;
   }
   .bar-close {
