--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -1,10 +1,10 @@
 $code-green: rgb(65, 223, 65);
 $code-bg: rgb(26, 26, 26);
-$soft-sidebar: #30336b;
+$accent: #54a0ff;
+$sidebar: #353b48;
 $button-bg: rgb(253, 253, 253);
-$button-bg-2: #30336b;
 $button-hover-bg: #4c5558;
 $button-active-bg: #2d3436;
-$box-color: #ee5253;
+$box-color: #ff6b6b;
 $slider-container-color: rgb(253, 253, 253);
 $dark: #2d3436;
