--- a/client/scss/_buttons.scss
+++ b/client/scss/_buttons.scss
@@ -20,12 +20,12 @@
 }
 
 .btn-2 {
-  background-color: $button-bg-2;
+  background-color: $accent;
   color: white;
 }
 
 .active {
-  background-color: $button-active-bg;
+  background-color: $accent;
   color: white;
 }
 
