add alert button styling

--- a/client/scss/_buttons.scss
+++ b/client/scss/_buttons.scss
@@ -32,3 +32,11 @@
 .copy-btn {
   width: 80%;
 }
+
+.cancel-btn {
+  background-color: $alert-color;
+  &:hover {
+    background-color: #fff;
+    color: $alert-color;
+  }
+}
