add alert color

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -6,5 +6,6 @@ $button-bg: rgb(253, 253, 253);
 $button-hover-bg: #4c5558;
 $button-active-bg: #2d3436;
 $box-color: #ff6b6b;
+$alert-color: #eb4d4b;
 $slider-container-color: rgb(253, 253, 253);
 $dark: #2d3436;
